name:                alder
version:             0.1.0
synopsis:            Reactive JavaScript DOM
license:             MIT
license-file:        LICENSE
author:              Kyle Raftogianis <kylerafto@gmail.com>
maintainer:          Kyle Raftogianis <kylerafto@gmail.com>
stability:           experimental
homepage:            http://github.com/ghcjs/ghcjs-sodium
bug-reports:         http://github.com/ghcjs/ghcjs-sodium
copyright:           Copyright (c) 2014 Kyle Raftogianis
category:            Web
build-type:          Simple
cabal-version:       >= 1.8

extra-source-files:
  js/
  scripts/
  .gitignore
  README.md

source-repository head
  type: git
  location: git://github.com/ghcjs/ghcjs-sodium

library
  hs-source-dirs: src
  ghc-options: -Wall
  js-sources: js/Events.js

  build-depends:
    aeson,
    base,
    containers,
    contravariant,
    ghcjs-base,
    mtl,
    sodium,
    text,
    unordered-containers

  exposed-modules:
    Alder.Html
    Alder.Html.Events
    Alder.Html5
    Alder.Html5.Attributes
    Alder.Mount
    Alder.Sodium

  other-modules:
    Alder.Html.Internal
    Alder.IOState
    Alder.JavaScript
